# ChangeLog for app-editors/vile
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-editors/vile/ChangeLog,v 1.42 2012/06/24 09:30:51 xarthisius Exp $

  24 Jun 2012; Kacper Kowalik <xarthisius.kk@gmail.com> vile-9.8g.ebuild:
  ppc stable wrt #418409

  24 Jun 2012; Tim Harder <radhermit@gentoo.org> -vile-9.8e.ebuild,
  -vile-9.8f.ebuild:
  Remove old.

*vile-9.8g (19 Mar 2012)

  19 Mar 2012; Tim Harder <radhermit@gentoo.org> +vile-9.8g.ebuild:
  Version bump.

  10 Feb 2012; Fabian Groffen <grobian@gentoo.org> vile-9.8f.ebuild:
  Transferred Prefix keywords

  13 Dec 2011; Tim Harder <radhermit@gentoo.org> vile-9.8e.ebuild,
  vile-9.8f.ebuild:
  Remove unnecessary eutils eclass.

*vile-9.8f (13 Dec 2011)

  13 Dec 2011; Tim Harder <radhermit@gentoo.org> +vile-9.8f.ebuild:
  Version bump.

  17 Oct 2011; Tim Harder <radhermit@gentoo.org> -vile-9.3h.ebuild,
  -vile-9.5-r1.ebuild, -files/vile-9.5-define-LEAD-before-use.patch,
  -vile-9.6.ebuild:
  Remove old.

  17 Oct 2011; Tim Harder <radhermit@gentoo.org> vile-9.8e.ebuild:
  Only update vi symlink if unset (bug #384861 by Roger).

*vile-9.8e (20 Apr 2011)

  20 Apr 2011; Tim Harder <radhermit@gentoo.org> +vile-9.8e.ebuild:
  Version bump. Update to EAPI 4.

  20 Jul 2009; Diego E. Pettenò <flameeyes@gentoo.org> vile-9.6.ebuild:
  Use emake -j1 for install.

*vile-9.6 (08 Mar 2008)

  08 Mar 2008; Krzysiek Pawlik <nelchael@gentoo.org> metadata.xml,
  -vile-9.5.ebuild, vile-9.5-r1.ebuild, +vile-9.6.ebuild:
  Version bump, see bug #206928.

  10 Oct 2007; Christian Faulhammer <opfer@gentoo.org> vile-9.3h.ebuild,
  vile-9.4d.ebuild, vile-9.5.ebuild, vile-9.5-r1.ebuild:
  remove PROVIDE=virtual/editor as we have now a new-style virtual

  09 Feb 2007; Fabian Groffen <grobian@gentoo.org> vile-9.4d.ebuild,
  vile-9.5.ebuild:
  Dropped ppc-macos keyword, see you in prefix

  25 Oct 2006; Mike Kelly <pioto@gentoo.org> vile-9.5-r1.ebuild: