@@ -1,6 +1,6 @@
 # Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-editors/xvile/xvile-9.8g.ebuild,v 1.2 2012/06/24 09:32:15 xarthisius Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-editors/xvile/xvile-9.8g.ebuild,v 1.3 2012/06/24 10:38:35 ago Exp $
 
 EAPI="4"
 
@@ -13,7 +13,7 @@ SRC_URI="ftp://invisible-island.net/vile/current/${MY_P}.tgz"
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="~alpha ~amd64 ~ia64 ppc ~sparc ~x86"
+KEYWORDS="~alpha amd64 ~ia64 ppc ~sparc ~x86"
 IUSE="perl"
 
 RDEPEND="perl? ( dev-lang/perl )
